# spidev-lib

./: CMakeLists.txt
sample/: spidev-testc.c  spidev-testcpp.cc
src/: spidev_lib++.cc
